# ticket

./: .env.sample  .gitignore  .hintrc  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.local.yml  docker-compose.production.yml  manage.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rav.yaml  tsconfig.json
.devcontainer/: devcontainer.json
apps/api/: urls.py
apps/api/events/: urls.py  views.py
apps/api/tenants/: serializers.py  urls.py  views.py
apps/core/: middleware.py  urls.py  views.py
apps/core/dashboard/: views.py
apps/dashboard/tenant/: apps.py  urls.py  views.py
apps/events/: admin.py  context_processors.py  forms.py  models.py  serializer.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py  0002_alter_event_tenant.py  0002_initial.py  0003_eventlaunchrequest.py  0003_initial.py  0004_eventlaunchrequest_plan.py  0005_eventlaunchrequest_managed_by.py  0006_eventlaunchrequest_password.py
apps/plan/: admin.py  apps.py  models.py
apps/plan/migrations/: 0001_initial.py  0002_alter_plan_button_class_alter_plan_card_color.py
apps/shared/: urls.py  views.py
apps/tenants/: admin.py  apps.py  helpers.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py
apps/tenants/api/: permissions.py
apps/tenants/migrations/: 0001_initial.py  0002_alter_client_schema_name_alter_domain_domain.py  0002_initial.py  0003_client_description.py  0004_client_manager_client_owner.py  0005_client_created_client_modified_client_slug.py
apps/tickets/: admin.py  models.py
apps/tickets/migrations/: 0001_initial.py  0002_alter_ticket_token.py  0002_initial.py  0003_remove_tickettype_event_id_event_tickettype_event.py
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  public_urls.py  shared_urls.py  urls.py  wsgi.py
config/settings/: base.py  local.py  logging.py  production.py  security.py  test.py
config/urls/: api_router.py  base.py  public.py  tenants.py
docker/: docker-compose.docs.yml
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
http/: index.ipynb
ifidel/: conftest.py
ifidel/users/: adapters.py  admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
ifidel/users/api/: serializers.py  views.py
ifidel/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
ifidel/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt  production.txt
static/js/: project.js  vendors.js
static/js/components/: events.js  theme.js
static/js/core/: main.js  sliders.js  vertical.js
static/js/libs/: axios.js  formHandler.js  formatter.js  handler.js  tables.js  toast.js
static/js/tenants/: auth.js  core.js  events.js  index.js  swiperjs.js  utils.js
static/sass/: base.scss  custom_bootstrap_vars.scss  header.scss  project.scss  shared.scss
static/sass/analytics/: core.scss
static/sass/base/: darkness.scss  responsive.scss  style.scss  vertical.scss
static/sass/header/: base.scss
static/sass/tenants/: project.scss
static/src/js/: axiosClient.ts
templates/: base.html
templates/account/: base.html  login.html  logo.html  signup.html  socials.html
templates/components/footer/: common.html  index.html  tenant.html
templates/components/header/: index.html  tenants.html
templates/components/sidebar/: tenants.html
templates/modal/: events.launch.html
templates/modal/tenants/: login.html
templates/offcanvas/: events.request.html
templates/pages/: home.html  privacy.html
templates/pages/dashboard/: base.html
templates/pages/home/: events.html  features.html  hero.html  pricing.html  steps.html  tenants.html  testimonials.html
templates/registration/: login.html
templates/shared/: base.html
templates/shared/pages/: privacy.html
templates/tenants/: base.html  tenant.html
templates/tenants/dashboard/: base.html
templates/tenants/errors/: 403.html  403_csrf.html  404.html  500.html
templates/tenants/pages/: event_detail.html  event_ticket_checkout.html  event_ticket_checkout_cancelled.html  event_ticket_checkout_confirmed.html  event_ticket_download.html  home.html  privacy.html
templates/tenants/tickets/: ticket_template.html
ticketless/api/: tasks.py  urls.py  views.py
ticketless/api/events/: urls.py  views.py
ticketless/api/snippets/: authentication.py  permission.py
ticketless/core/: apps.py  urls.py  views.py
ticketless/core/dashboard/: urls.py  views.py
ticketless/customers/: admin.py  apps.py  models.py  serializers.py  views.py
ticketless/customers/migrations/: 0001_initial.py  0002_client_description_client_manager_client_owner_and_more.py
ticketless/dashboard/: middleware.py
ticketless/dashboard/templatetags/: dashboard_tags.py
ticketless/dashboard/tenant/: forms.py  permissions.py  urls.py  views.py
ticketless/events/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
ticketless/events/migrations/: 0001_initial.py  0002_initial.py  0003_delete_event.py
ticketless/management/: admin.py  apps.py  models.py
ticketless/management/migrations/: 0001_initial.py
ticketless/plan/: apps.py
ticketless/plan/migrations/: 0001_initial.py
ticketless/shared/: apps.py  urls.py  views.py
ticketless/tenants/: apps.py  mails.py  tasks.py  urls.py  views.py
ticketless/tenants/actions/: urls.py  views.py
ticketless/tenants/utils/: views.py
ticketless/tickets/: admin.py  apps.py  forms.py  models.py  serializer.py  utils.py  widgets.py
ticketless/tickets/api/: permissions.py
ticketless/tickets/migrations/: 0001_initial.py  0002_initial.py  0003_alter_event_options.py  0005_alter_event_options.py  (+10 more)
ticketless/users/: adapters.py  admin.py  apps.py  models.py  signals.py  urls.py  views.py
webpack/: common.config.js  dev.config.js  prod.config.js
(+36 files in other folders)
