[project]
name = "ticket"
version = "0.1.0"
description = "ticket"
authors = [
    { name = "kwasa", email = "kwasa@ticket.io" },
     { name = "david", email = "david@ticket.io" }
]
maintainers = [
    { name = "kwasa", email = "kwasa@ticket.io" },
     { name = "david", email = "david@ticket.io" }
]
keywords = [
    "django",
    "ticket",
]
license = { file = "LICENSE" }
readme = { file = "README.md" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "argon2-cffi==25.1.0",
    "celery==5.5.3",
    "django-celery-beat==2.8.1",
    "django>=5.2.8",
    "flower==2.0.1",
    "hiredis==3.2.1",
    "pillow==11.3.0",
    "python-slugify==8.0.4",
    "redis==6.2.0",
    "uvicorn-worker==0.3.0",
    "uvicorn[standard]==0.35.0",
    "whitenoise==6.9.0",
    "django-environ==0.12.0",
    "django-model-utils==5.0.0",
    "django-allauth[mfa]==65.10.0",
    "django-crispy-forms==2.4",
    "crispy-bootstrap5==2025.6",
    "django-redis==6.0.0",
    "djangorestframework==3.16.0",
    "django-cors-headers==4.7.0",
    "drf-spectacular==0.28.0",
    "django-webpack-loader==3.2.1",
    "gunicorn==23.0.0",
    "psycopg2-binary>=2.9.10",
    "sentry-sdk==2.33.2",
    "django-storages[s3]==1.14.6",
    "django-anymail[mailgun]==13.0",
    "werkzeug[watchdog]==3.1.3",
    "ipdb==0.13.13",
    "watchfiles==1.1.0",
    "mypy==1.17.0",
    "django-stubs[compatible-mypy]==5.2.2",
    "pytest==8.4.1",
    "pytest-sugar==1.0.0",
    "djangorestframework-stubs==3.16.0",
    "sphinx==8.2.3",
    "sphinx-autobuild==2024.10.3",
    "ruff==0.12.4",
    "coverage==7.9.2",
    "djlint==1.36.4",
    "pre-commit==4.2.0",
    "factory-boy==3.3.2",
    "django-debug-toolbar==5.2.0",
    "django-extensions==4.1",
    "django-coverage-plugin==3.1.1",
    "pytest-django==4.11.1",
    "django-browser-reload>=1.20.0",
    "pyjwt>=2.10.1",
    "django-tenants>=3.9.0",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.3",
    "django-widget-tweaks>=1.5.0",
    "django-tenant-users>=2.2.1",
]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["ifidel/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
target-version = "py312"
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
"COM812"
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
  "UP038",
]

[tool.ruff.lint.isort]
force-single-line = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "rav>=0.1.1",
]
